--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Sea-power'
 - !lcsh 'Naval art and science'
 - !lcsh 'United States. Navy -- Management'
+- GITenberg
 title: The Navy as a Fighting Machine
 url: http://www.gutenberg.org/ebooks/17547
